unpackaged/main/default/objects/School__c/School__c.object-meta.xml
<CustomObject>
    <label>School</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>