unpackaged/main/default/objects/School__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>phone</label>
    <type>Phone</type>
</CustomField>