unpackaged/main/default/objects/School__c/fields/place__c.field-meta.xml
<CustomField>
    <fullName>place__c</fullName>
    <label>place</label>
    <length>20</length>
    <type>Text</type>
</CustomField>